editor-components/intro-section/intro-section5/intro-section5.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  position: relative;
  overflow: hidden;
  z-index: 1;

  .background-container {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    top: 0;
    left: 0;

    .background-media {
      width: 100%;
      height: 100%;
      object-fit: cover;
      display: block;
    }

    .overlay {
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      z-index: 1;
      background-color: var(--composer-overlay-color);
      pointer-events: none;
    }
  }

  &.has-media {
    .max-content {
      .vertical-content {
        padding-top: calc(5rem + var(--composer-gap-lg));

        .subtitle {
          padding: 0 !important;
          background: transparent !important;
        }

        .subtitle,
        .title,
        .description {
          color: #fff !important;
        }
      }

      .button-wrapper {
        .button {

          .button-icon,
          .button-text {
            color: #fff !important;
          }
        }
      }
    }
  }

  .max-content {
    display: flex;
    position: relative;
    z-index: 2;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 60vh;

    .vertical-content {
      width: 100%;
      flex-wrap: wrap;
      align-items: center;
      padding-bottom: calc(5rem + var(--composer-gap-lg));

      .subtitle {
        margin-left: auto;
        margin-right: auto;
        transform: none;

        &::before {
          display: none !important;
        }
      }

      .title,
      .description {
        text-align: center !important;
      }
    }

    .button-wrapper {
      position: absolute;
      align-items: center;
      bottom: 0;
      left: 0;
      right: 0;
      display: flex;
      justify-content: center !important;
      flex-wrap: wrap;
      gap: var(--composer-gap-sm);

      .button {
        .button-icon {
          font-size: 5rem;
          line-height: 0;
        }

        .button-text {
          font-size: 4rem;
        }
      }

      &.animated .button {
        animation: bounce 2s infinite;
      }

      @keyframes bounce {

        0%,
        20%,
        50%,
        80%,
        100% {
          transform: translateY(0);
        }

        40% {
          transform: translateY(-10px);
        }

        60% {
          transform: translateY(-5px);
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .button-wrapper {
        .button {
          .button-icon {
            font-size: 3rem;
          }

          .button-text {
            font-size: 1.5rem;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      min-height: 40vh !important;

      .button-wrapper {
        .button {

          .button-text {
            font-size: 1rem;
          }
        }
      }
    }
  }
}

